# aegnt27

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  LICENSE-COMMERCIAL  LICENSE-NONCOMMERCIAL  LICENSE-OPEN-CORE  LICENSING-FAQ.md  PROPRIETARY-ANALYSIS.md  README.md
docs/api/: README.md
docs/guides/: best_practices.md  configuration.md  quick_start.md
docs/tutorials/: content_generation.md  web_automation.md
examples/: advanced_customization.rs  basic_integration.rs  multi_platform_deployment.rs  performance_optimization.rs
src/: audio.rs  config.rs  detection.rs  error.rs  lib.rs  mouse.rs  typing.rs  utils.rs  visual.rs
website/: index.html
